loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:3: error: not found: value est
while (!est SurBiscuit()) {
        ^